develop: History page 1) fixed scrollbar 2) replaced Filter button

--- a/frontend/components/admin/history-page/history-item-list.scss
+++ b/frontend/components/admin/history-page/history-item-list.scss
@@ -8,7 +8,7 @@
     	overflow: auto;
     	display:block;
    		/*height:400px;*/
-    	overflow-y :auto;
+    	overflow-y:overlay;
 	}
 	thead, tbody tr {
 	   	display:table;
